fix: generic .service

--- a/deploy/template_blog.service.j2
+++ b/deploy/template_blog.service.j2
@@ -6,7 +6,7 @@ WorkingDirectory={{ working_directory }}
 ExecStart={{ exec_start }}
 Restart=no
 KillSignal=SIGINT
-SyslogIdentifier=TikitkoBlog
+SyslogIdentifier={{ syslog_identifier }}
 User=root
 
 [Install]
